# ist3-transport

./: README.md  aipw.py  combine.py  ipw.py  ist_combined.csv  ist_combined_with_membership.csv  main.py  membership.py  pipeline.py  plot_dist.py  print.py  pyproject.toml  results.py  variance_explanation.md
datasets/: combine.py  ist_combined.csv
equations/: aipw.py  ate.py  membership_propensity.py  outcome_model.py  transport_weights.py  treatment_propensity.py  variance.py
graphs/: calibration_plots.py  plot_dist.py
steps/: ist_combined_all_steps.csv  ist_combined_all_steps2.csv  ist_combined_all_steps3.csv  ist_combined_all_steps4.csv  ist_combined_all_steps7.csv  ist_combined_all_steps9.csv
